--- a/index.html
+++ b/index.html
@@ -187,17 +187,17 @@
 
         <form id="orderForm">
             <!-- שם המזמין -->
-            <label style="direction: center">שם המזמין:
+            <label style="text-align: center;">שם המזמין:
                 <input type="text" id="customerName" required>
             </label>
 
             <!-- כתובת האימייל של המזמין -->
-            <label style="direction: center">אימייל של המזמין:
+            <label style="text-align: center;">אימייל של המזמין:
                 <input type="email" id="customerEmail" required>
             </label>
 
             <!-- סוג המקום (בית מרקחת) -->
-            <label style="direction: center">בית מרקחת:
+            <label style="text-align: center;">בית מרקחת:
                 <select style="direction: rtl" id="placeType" required onchange="updateForm()">
                     <option style="text-align: center;" value="" disabled selected>-- בחר/י --</option>
                     <option style="text-align: center;" value="pharmacy">בית מרקחת</option>
@@ -207,12 +207,12 @@
             </label>
 
             <!-- שם בית המרקחת -->
-            <label style="direction: center" id="placeNameLabel">שם בית המרקחת:
+            <label style="text-align: center;'" id="placeNameLabel">שם בית המרקחת:
                 <input type="text" id="placeName" required>
             </label>
 
             <!-- טלפון המזמין -->
-            <label style="direction: center">מספר פלאפון של המזמין:
+            <label style="text-align: center;">מספר פלאפון של המזמין:
                 <input type="tel" id="phoneNumber" required>
             </label>
 
