--- a/index.html
+++ b/index.html
@@ -372,11 +372,11 @@
         const pharmacyImage = document.getElementById('pharmacyImage');
         const placeType = document.getElementById('placeType').value;
         if (placeType === 'pharmacy') {
-            pharmacyImage.src = 'טופס הזמנה אפריל פרטיים.png';
+            pharmacyImage.src = 'טופס הזמנה 05-25 פרטיים.png';
         } else if (placeType === 'future_pharmacy') {
             pharmacyImage.src = 'טופס הזמנה 05-25  רוקחים עתיד.png';
         } else if (placeType === 'shrem_pharmacy') {
-            pharmacyImage.src = 'טופס הזמנה אפריל פרטיים.png';
+            pharmacyImage.src = 'טופס הזמנה 05-25 פרטיים.png';
         }
         pharmacyImage.style.display = placeType ? 'block' : 'none';
     }
