--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
 
         <!-- Product Image Section -->
         <section class="mt-[-6rem] mb-12 flex justify-center z-10 relative">
-            <!-- <img src="image.png" alt="Lab-On-Time Device" class="product-image-stylish"> -->
-            <div class="product-image-stylish mx-auto h-64 bg-gray-200 flex items-center justify-center text-gray-500">[Product Image]</div>
+            <img src="image.png" alt="Lab-On-Time Device" class="product-image-stylish">
+            <div class="product-image-stylish mx-auto h-64 bg-gray-200 flex items-center justify-center text-gray-500">[</div>
         </section>
 
 
