--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
         <!-- Hero Section -->
         <section class="brand-bg-hero text-white rounded-b-3xl -mx-4 px-4">
             <header class="py-6 px-4 flex justify-between items-center">
-                 <div class="logo-placeholder-inline">[BMT Logo]</div>
+                 <div class="logo-placeholder-inline"></div>
+                 <img scr="unnamed.png" alt="BMT Diagnostics Logo" style="max-height: 40px;">
                  <div class="text-sm font-semibold text-sky-200">Revolutionizing Point-of-Care Diagnostics</div>
             </header>
             <div class="text-center py-12 px-4 md:py-16">
