--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <section class="brand-bg-hero text-white rounded-b-3xl -mx-4 px-4">
             <header class="py-6 px-4 flex justify-between items-center">
                  <div class="logo-placeholder-inline"></div>
-                 <img scr="unnamed.png" alt="BMT Diagnostics Logo" style="max-height: 40px;">
+                 <img src="unnamed.png" alt="BMT Diagnostics Logo" style="max-height: 40px;">
                  <div class="text-sm font-semibold text-sky-200">Revolutionizing Point-of-Care Diagnostics</div>
             </header>
             <div class="text-center py-12 px-4 md:py-16">
@@ -148,7 +148,7 @@
         <!-- Product Image Section -->
         <section class="mt-[-6rem] mb-12 flex justify-center z-10 relative">
             <img src="image.png" alt="Lab-On-Time Device" class="product-image-stylish">
-            <div class="product-image-stylish mx-auto h-64 bg-gray-200 flex items-center justify-center text-gray-500">[</div>
+            <div class="product-image-stylish mx-auto h-64 bg-gray-200 flex items-center justify-center text-gray-500"></div>
         </section>
 
 
