--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         .product-image-stylish {
             border-radius: 1rem;
             box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
-            max-width: 450px; /* Made image wider */
+            max-width: 500px; /* Made image wider */
         }
         
         @media print {
@@ -123,11 +123,11 @@
         <section class="brand-bg-hero text-white rounded-b-3xl -mx-4 px-4">
             <header class="py-6 px-4 flex justify-between items-center">
                  <!-- The logo image tag is now the only element for the logo -->
-                 <img src="unnamed.png" alt="BMT Diagnostics Logo" style="max-height: 48px;"> <!-- Logo made slightly larger -->
+                 <img src="unnamed.png" alt="BMT Diagnostics Logo" style="max-height: 60px;"> <!-- Logo made larger -->
                  
                  <div class="text-sm font-semibold text-sky-200">Revolutionizing Point-of-Care Diagnostics</div>
             </header>
-            <div class="text-center py-12 px-4 md:py-16">
+            <div class="text-center py-8 px-4 md:py-12"> <!-- Reduced vertical padding to make hero smaller -->
                 <h1 class="section-title text-white">The Future of Diagnostics is Here.</h1>
                 <p class="section-subtitle text-sky-200 mt-4">
                     Lab-On-Time™ delivers lab-grade accuracy to the point-of-care with a revolutionary single-step process.
@@ -136,7 +136,7 @@
         </section>
 
         <!-- Product Image Section -->
-        <section class="mt-[-4.5rem] mb-8 flex justify-center z-10 relative"> <!-- Image moved down and bottom margin adjusted -->
+        <section class="mt-[-3.5rem] mb-16 flex justify-center z-10 relative"> <!-- Image moved down and bottom margin increased -->
             <!-- The product image tag is now the only element here -->
             <img src="image.png" alt="Lab-On-Time Device" class="product-image-stylish">
         </section>
