--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         </section>
 
         <!-- Product Image Section -->
-        <section class="mb-12 pt-12 flex justify-center z-10 relative bg-f9fafb"> <!-- Added top padding to move it down from the blue bg -->
+        <section class="py-12 flex justify-center"> <!-- Removed negative margin and Z-index, added top padding -->
             <img src="image.png" alt="Lab-On-Time Device" class="product-image-stylish">
         </section>
 
