--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <!-- Hero Section -->
         <section class="brand-bg-hero text-white rounded-b-3xl -mx-4 px-4">
             <header class="py-6 px-4 flex justify-between items-center">
-                 <img src="unnamed.png" alt="BMT Diagnostics Logo" style="max-height: 72px;"> 
+                 <img src="unnamed (1).png" alt="BMT Diagnostics Logo" style="max-height: 72px;"> 
                  <div class="text-sm font-semibold text-sky-200">Revolutionizing Point-of-Care Diagnostics</div>
             </header>
             <div class="text-center pt-8 pb-12 px-4"> <!-- Reduced bottom padding -->
